add strategy fillToCapacity

--- a/public/admin.html
+++ b/public/admin.html
@@ -50,6 +50,9 @@
         <button class="strategy-btn" data-strategy="random" onclick="setStrategy('random')">
           تصادفی
         </button>
+        <button class="strategy-btn" data-strategy="fillToCapacity" onclick="setStrategy('fillToCapacity')">
+          پر کردن سرور تا ظرفیت
+        </button>
       </div>
     </div>
 
